# wsx

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  renovate.json5
.github/workflows/: autofix.yml  build.yml  license-check.yml  release.yml
docs/: CONFIG.md  USAGE.md
src/: cli.rs  commands.rs  config.rs  env.rs  logs.rs  main.rs  paths.rs  state.rs  telemetry.rs
src/process/: mod.rs  unix.rs  windows.rs
tests/: e2e_cli.rs
tests/e2e/: common.rs  linux.rs  macos.rs  mod.rs  non_linux.rs  windows.rs
