[package]
name = "wsx"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["clock", "serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
sysinfo = "0.38.0"
thiserror = "2.0.11"
uuid = { version = "1.12.1", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.0", features = ["signal"] }
